# oz_django

./: README.md  pyproject.toml
chapter_1/: pyproject.toml
chapter_1/config/: settings.py  urls.py
chapter_1/templates/: user_list.html
chapter_2/: db.sqlite3  pyproject.toml
chapter_2/config/: settings.py  urls.py
chapter_2/templates/: todo_info.html  todo_list.html
chapter_2/todo/: models.py  views.py
chapter_2/todo/migrations/: 0001_initial.py
chapter_3/: db.sqlite3  pyproject.toml
chapter_3/config/: settings.py  urls.py
chapter_3/templates/registration/: login.html
chapter_3/templates/todo/: todo_info.html  todo_list.html
chapter_3/todo/: admin.py  forms.py  models.py
chapter_3/todo/migrations/: 0001_initial.py
chapter_4/: db.sqlite3  pyproject.toml
chapter_4/config/: urls.py
chapter_4/todo/: models.py
chapter_4/todo/migrations/: 0001_initial.py  0002_comment.py  0003_todo_completed_image_todo_thumbnail.py
