[tool.poetry]
name = "chapter-4"
version = "0.1.0"
description = ""
authors = ["moonyu <dbwls3681@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
django-extensions = "^3.2.3"
django-summernote = "^0.8.20.0"
pillow = "^10.4.0"
django-cleanup = "^8.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
